Revision history for Perl extension At.pm

{{$NEXT}}

0.07 2024-01-20T22:54:55Z

    - Login failures are fatal errors
    - New system to resume an authenticated session
    - Update according to lexicon changes in bluesky-social/atproto@15f3856
       - communication templates for moderation

0.06 2024-01-19T02:20:52Z

    - Update according to lexicon changes in bluesky-social/atproto@e43396a
       - phone verification support on account creation

0.05 2024-01-09T04:01:09Z

    - Update according to lexicon changes in bluesky-social/atproto#1970
       - new method: admin_getAccountsInfo
       - new field in class At::Lexicon::com::atproto::admin::accountView

0.04 2024-01-06T21:14:08Z

    - ...don't write tests that fail when an otherwise unimportant page on the internet changes

0.03 2024-01-06T20:58:02Z

    - Full support for core At protocol and Bluesky extensions

0.02 2023-11-22T04:14:23Z

    - Fix synopsis
    - Split At::Bluesky from At.pm because PAUSE ignores subclasses in perl's new class syntax

0.01 2023-11-22T03:44:15Z

    - original version